# Luma3DS-Plugin-DiscordRPC

./: .dockerignore  .env.example  .env.exemple  .gitignore  CTRPluginFramework.plgInfo  LICENSE  Makefile  README.md  cliff.toml  docker-compose.yml  udp_logger.py
.github/workflows/: build-3gx.yml  ci-release.yml  ci-server-image.yml  release.yml  server-image.yml
Includes/: common.h  csvc.h  plgldr.h
Sources/: csvc.s  main.cpp  plgldr.c  plugin_main.c
client/: .env.example  build_constants.py  client.spec  config.py  main.py  requirements.txt  service.py
client-go/: go.mod  go.sum
client-go/cmd/drpc/: main.go
client-go/internal/config/: config.go
client-go/internal/plugin/: plugin.go
client-go/internal/rpc/: ipc.go  rpc.go
client-go/internal/service/: daemon.go
client-go/internal/token/: token.go
client-go/internal/updater/: updater.go
client-go/internal/ws/: ws.go
client-tauri/: index.html  package-lock.json  package.json  vite.config.js
client-tauri/src/: App.svelte  main.js
client-tauri/src-tauri/: Cargo.toml  tauri.conf.json
client-tauri/src-tauri/capabilities/: default.json
client-tauri/src-tauri/icons/: icon.icns
client-tauri/src-tauri/src/: api.rs  commands.rs  config.rs  lib.rs  rpc.rs  ws.rs
docs/: index.html  protocol-v1.md
scripts/: docker-build.sh
server/: Dockerfile  Makefile  discord-rpc.plgInfo  docker-compose.prod.yml  docker-compose.yml  main.py  requirements.txt  tid_map.json
server/Includes/: plgldr.h
server/Sources/: bootloader.s  csvc.s  plgldr.c  plugin_main.c
server/docker/: Dockerfile
